@@ -1,9 +1,8 @@
-import groovy.json.JsonSlurper
+import org.gradle.internal.jvm.Jvm
 
 plugins {
     id 'application'
-    id "de.undercouch.download" version "4.0.0"
-    id "com.github.breadmoirai.github-release" version "2.2.9"
+    id 'de.undercouch.download' version '4.0.0'
 }
 
 sourceSets {
@@ -11,20 +10,32 @@ sourceSets {
     main.resources.srcDirs = ["assets/"]
 }
 
-static def osName() { System.getProperty('os.name').toLowerCase(Locale.ROOT) }
-
-if (osName().contains('mac')) {
-    run {
-        jvmArgs += '-XstartOnFirstThread'
-    }
-}
-
-mainClassName = "launcher.DesktopLauncher"
 
 dependencies {
     compile project(":client")
     compile "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-freetype-platform:$freetypeVersion:natives-desktop"
+}
+
+
+static def osName() { System.getProperty('os.name').toLowerCase(Locale.ROOT) }
+
+static def getJDK() { Jvm.current().getJavaHome().path }
+
+mainClassName = "launcher.DesktopLauncher"
+
+// Determine where the JDK is going to be (Windows/Linux and Mac)
+def jdkFolder = "${projectDir}/build/jdk"
+def runtimePath = osName().contains('mac') ? "${buildDir}/jre/contents/plugins/Java.runtime/Contents/Home" : "${buildDir}/jre"
+def distributionPath = "${buildDir}/distribution/"
+def inputPath = "${projectDir}/build/input/"
+def jpackagePath = osName().contains('mac') ? "${jdkFolder}/jdk-14.jdk/Contents/Home/bin/jpackage" : "${jdkFolder}/jdk-14/bin/jpackage"
+def jdkPath = osName().contains('mac') ? "${jdkFolder}/jdk-14.jdk" : "${jdkFolder}/jdk-14"
+
+if (osName().contains('mac')) {
+    run {
+        jvmArgs += '-XstartOnFirstThread'
+    }
 }
 
 task dist(type: Jar) {
@@ -39,103 +50,140 @@ task dist(type: Jar) {
 dist.dependsOn classes
 run.dependsOn classes
 
-def releasesDir() { "${projectDir}/build/releases/" }
+task prepareInput(dependsOn: dist) {
+    copy {
+        from files(sourceSets.main.resources.srcDirs)
+        from("${projectDir}/build/libs/" + "${project.name}-${project.version}.jar")
 
-def zipDir() { "${projectDir}/build/zip/" }
-
-static def packingDir() { "packing/" }
-
-static def switchConfig(platform) {
-    def config
-    switch (platform) {
-        case "windows32":
-            config = packingDir().concat("build-windows-32.json")
-            break
-        case "windows64":
-            config = packingDir().concat("build-windows-64.json")
-            break
-        case "mac":
-            config = packingDir().concat("build-mac.json")
-            break
-        case "linux64":
-            config = packingDir().concat("build-linux.json")
-            break
+        into inputPath
     }
-    config
 }
 
-def packArgs(platform) {
-    [
-            "${projectDir}/packing/jdks/packr.jar",
-            "--platform", platform,
-            switchConfig(platform)
-    ]
-}
+// creates a replacement runtime via jlink command (much smaller than jpackage)
+task jlink(type: Exec, dependsOn: prepareInput) {
+    doFirst() {
+        download {
 
-task packWindows32(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("windows32")
-}
+            if (osName().contains('windows')) {
+                src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_windows-x64_bin.zip'
+            } else if (osName().contains('linux')) {
+                src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_linux-x64_bin.tar.gz'
+            } else if (osName().contains('mac')) {
+                src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_osx-x64_bin.tar.gz'
+            }
 
-task packWindows64(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("windows64")
-}
-
-task packMac(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("mac")
-}
-
-task packLinux64(type: JavaExec) {
-    main = "-jar"
-    args = packArgs("linux64")
-}
-
-task pack {
-    dependsOn 'dist'
-    dependsOn 'downloadBinaries'
-    dependsOn 'packWindows32'
-    dependsOn 'packWindows64'
-    dependsOn 'packMac'
-    dependsOn 'packLinux64'
-    tasks.findByName('dist').mustRunAfter('downloadBinaries')
-    tasks.findByName('packWindows32').mustRunAfter('dist')
-    tasks.findByName('packWindows64').mustRunAfter 'packWindows32'
-    tasks.findByName('packMac').mustRunAfter 'packWindows64'
-    tasks.findByName('packLinux64').mustRunAfter 'packMac'
-}
-
-task zipAll() {
-    file(releasesDir()).eachDir() { folder ->
-        def taskName = "zip${folder.name.capitalize()}"
-        task "$taskName"(type: Zip) {
-            from folder
-            archiveFile.set(project.file(zipDir() + folder.name + ".zip"))
+            def jdkFolderFile = file(jdkFolder)
+            if(!jdkFolderFile.exists()) {
+                jdkFolderFile.mkdirs()
+            }
+            dest jdkFolder
+            overwrite false
         }
-        zipAll.dependsOn taskName
+
+        if (!file(jdkPath).exists()) {
+            copy {
+
+                if (osName().contains('windows')) {
+                    from zipTree("${jdkFolder}/openjdk-14-jpackage+8_windows-x64_bin.zip")
+                } else if (osName().contains('linux')) {
+                    from tarTree("${jdkFolder}/openjdk-14-jpackage+8_linux-x64_bin.tar.gz")
+                } else if (osName().contains('mac')) {
+                    from tarTree("${jdkFolder}/openjdk-14-jpackage+8_osx-x64_bin.tar.gz")
+                }
+
+                into jdkPath
+            }
+        }
+    }
+
+    // Overwrite previous packaged application.
+    if (file("${buildDir}/distribution/${project.appName}").exists()) {
+        delete(file("${buildDir}/distribution/${project.appName}"))
+    }
+
+    // Overwrite previous bundled jre.
+    if (file(runtimePath).exists()) {
+        delete(file(runtimePath))
+    }
+
+    commandLine = [
+            getJDK().concat("/bin/jlink"),
+            '-p', getJDK().concat("/jmods"),
+            '--add-modules', 'java.base,java.desktop,jdk.unsupported,java.logging',
+            '--strip-debug',
+            '--no-header-files',
+            '--no-man-pages',
+            '--strip-native-commands',
+            '--vm=server',
+            '--compress=2',
+            '--output', runtimePath
+    ]
+
+    doLast {
+        // Final debloat for jpackage
+        delete(file("${runtimePath}/conf"))
+        delete(file("${runtimePath}/legal"))
+        delete fileTree("${runtimePath}/bin").matching { include "api*.dll" }
     }
 }
 
-task downloadBinaries() {
-    def binJson = file(packingDir().concat("binaries.json"))
-    def json = new JsonSlurper().parseText(binJson.text)
+// creates application bundle (executable + runtime)
+task appBundle(type: Exec, dependsOn: jlink) {
 
-    download {
-        src([json.packr, json.windows32, json.windows64, json.linux64, json.mac])
-        dest packingDir().concat("jdks")
-        overwrite false
+    doFirst {
+        System.out.println("Runtime Path: " + runtimePath)
+        System.out.println("Distribution Path: " + distributionPath)
+        System.out.println("Input Path: " + inputPath)
+        System.out.println("Jpackage Path: " + jpackagePath)
+        System.out.println("Jdk Path: " + jdkPath)
     }
-}
+    def mainJarFileName = "${project.name}-${project.version}.jar"
+    def commands = [
+            jpackagePath,
+            '--name', project.appName,
+            '--vendor', "Argentum Online Libre",
+            '--app-version', "${project.version}",
+            '--output', distributionPath,
+            '--runtime-image', runtimePath,
+            '--input', inputPath,
+            '--main-class', project.mainClassName,
+            '--main-jar', mainJarFileName
+    ]
 
-task release() {
-    dependsOn 'dist'
-    dependsOn 'pack'
-    dependsOn 'zipAll'
-    dependsOn 'githubRelease'
-    tasks.findByName('pack').mustRunAfter('dist')
-    tasks.findByName("zipAll").mustRunAfter('pack')
-    tasks.findByName("githubRelease").mustRunAfter('zipAll')
+    if (osName().contains('windows')) {
+        commands << "--icon"
+        commands << "${projectDir}/assets/data/icons/ao.ico"
+    } else if (osName().contains('linux')) {
+        commands << "--icon"
+        commands << "${projectDir}/assets/data/icons/ao.png"
+    } else if (osName().contains('mac')) {
+        commands << "--icon"
+        commands << "${projectDir}/assets/data/icons/ao.icns"
+        commands << "--java-options"
+        commands << "-XstartOnFirstThread"
+    }
+
+    commandLine = commands
+
+    doLast() {
+        copy {
+            from("${projectDir}/Config.json")
+            if (osName().contains('mac')) {
+                into("${distributionPath}${project.appName}.app/Contents/Resources/")
+            } else {
+                into("${distributionPath}${project.appName}/app")
+            }
+        }
+
+        // Debloat for Windows users.
+        delete fileTree("${distributionPath}${project.appName}/bin").matching {
+            include "*.dll" exclude "applauncher.dll"
+        }
+        delete fileTree("${distributionPath}${project.appName}/app").matching { include "api*.dll" }
+
+        System.out.println("Application '${project.appName}' packaged.")
+        System.out.println(" -> location: ${distributionPath}${project.appName}/")
+    }
 }
 
 githubRelease {
